# Mjolnir

./: .gitignore  CMakeLists.txt
input/: sh3.toml
jarngreipr/forcefield/: GlobalInteractionParameter.hpp  LocalInteractionParameter.hpp  output_parameters.hpp
jarngreipr/geometry/: distance.hpp
jarngreipr/io/: chainID_iterator.hpp  read_pdb_chain.hpp  unpack_chainID.hpp
jarngreipr/model/: Bead.hpp  CGChain.hpp  CarbonAlpha.hpp  CarbonAlphaModel.hpp  ClementiGo.hpp  Interaction.hpp  Model.hpp  apply_model.hpp
jarngreipr/pdb/: chainID_iterator.hpp
megingjord/simd/: functors.hpp  pack.hpp
megingjord/simd/fma/: functor_fma.hpp
megingjord/util/: split.hpp
mjolnir/core/: BondAngleInteraction.hpp  BondLengthInteraction.hpp  DihedralAngleInteraction.hpp  ForceField.hpp  GlobalDistanceInteraction.hpp  GlobalForceField.hpp  GlobalInteractionBase.hpp  Integrator.hpp  LocalForceField.hpp  Particle.hpp  ParticleContainer.hpp  Simulator.hpp  UnderdampedLangevin.hpp  VelocityVerlet.hpp  VerletList.hpp
mjolnir/io/toml/: read_global_forcefield.hpp  read_particles.hpp
mjolnir/math/: Matrix.hpp  Vector.hpp
mjolnir/util/: spin_lock.hpp  time_stamp.hpp
src/: CMakeLists.txt  jarngreipr.cpp  main.cpp
test/: test_bond_angle_interaction.cpp  test_bond_length_interaction.cpp  test_dihedral_angle_interaction.cpp
